UPD: Merge some fixes/changes from trunk (r3655-3669)
git-svn-id: http://svn.code.sf.net/p/doublecmd/code@3701 10bb5c37-c6d6-4c74-9a2a-30fc9b6e22f7

--- a/branches/0.5/language/doublecmd.cht.po
+++ b/branches/0.5/language/doublecmd.cht.po
@@ -721,16 +721,33 @@ msgctxt "TFRMDIFFER.ACTCANCELCOMPARE.CAPTION"
 msgid "Cancel"
 msgstr "取消"
 
+#: TFRMDIFFER.ACTCANCELCOMPARE.HINT
+msgctxt "TFRMDIFFER.ACTCANCELCOMPARE.HINT"
+msgid "Cancel"
+msgstr "取消"
+
 #: TFRMDIFFER.ACTCLOSE.CAPTION
 msgctxt "TFRMDIFFER.ACTCLOSE.CAPTION"
 msgid "Close"
 msgstr "關閉"
 
 #: TFRMDIFFER.ACTCOPYLEFTTORIGHT.CAPTION
+msgctxt "TFRMDIFFER.ACTCOPYLEFTTORIGHT.CAPTION"
+msgid "Copy Block Right"
+msgstr ""
+
+#: TFRMDIFFER.ACTCOPYLEFTTORIGHT.HINT
+msgctxt "TFRMDIFFER.ACTCOPYLEFTTORIGHT.HINT"
 msgid "Copy Block Right"
 msgstr ""
 
 #: TFRMDIFFER.ACTCOPYRIGHTTOLEFT.CAPTION
+msgctxt "TFRMDIFFER.ACTCOPYRIGHTTOLEFT.CAPTION"
+msgid "Copy Block Left"
+msgstr ""
+
+#: TFRMDIFFER.ACTCOPYRIGHTTOLEFT.HINT
+msgctxt "TFRMDIFFER.ACTCOPYRIGHTTOLEFT.HINT"
 msgid "Copy Block Left"
 msgstr ""
 
@@ -769,6 +786,12 @@ msgid "Undo"
 msgstr "撤銷"
 
 #: TFRMDIFFER.ACTFIRSTDIFF.CAPTION
+msgctxt "TFRMDIFFER.ACTFIRSTDIFF.CAPTION"
+msgid "First Difference"
+msgstr ""
+
+#: TFRMDIFFER.ACTFIRSTDIFF.HINT
+msgctxt "TFRMDIFFER.ACTFIRSTDIFF.HINT"
 msgid "First Difference"
 msgstr ""
 
@@ -785,6 +808,12 @@ msgid "Keep Scrolling"
 msgstr ""
 
 #: TFRMDIFFER.ACTLASTDIFF.CAPTION
+msgctxt "TFRMDIFFER.ACTLASTDIFF.CAPTION"
+msgid "Last Difference"
+msgstr ""
+
+#: TFRMDIFFER.ACTLASTDIFF.HINT
+msgctxt "TFRMDIFFER.ACTLASTDIFF.HINT"
 msgid "Last Difference"
 msgstr ""
 
@@ -793,6 +822,12 @@ msgid "Line Differences"
 msgstr ""
 
 #: TFRMDIFFER.ACTNEXTDIFF.CAPTION
+msgctxt "TFRMDIFFER.ACTNEXTDIFF.CAPTION"
+msgid "Next Difference"
+msgstr ""
+
+#: TFRMDIFFER.ACTNEXTDIFF.HINT
+msgctxt "TFRMDIFFER.ACTNEXTDIFF.HINT"
 msgid "Next Difference"
 msgstr ""
 
@@ -809,6 +844,12 @@ msgid "Paint Background"
 msgstr ""
 
 #: TFRMDIFFER.ACTPREVDIFF.CAPTION
+msgctxt "TFRMDIFFER.ACTPREVDIFF.CAPTION"
+msgid "Previous Difference"
+msgstr ""
+
+#: TFRMDIFFER.ACTPREVDIFF.HINT
+msgctxt "TFRMDIFFER.ACTPREVDIFF.HINT"
 msgid "Previous Difference"
 msgstr ""
 
@@ -817,33 +858,89 @@ msgctxt "TFRMDIFFER.ACTRELOAD.CAPTION"
 msgid "Reload"
 msgstr ""
 
+#: TFRMDIFFER.ACTRELOAD.HINT
+msgctxt "TFRMDIFFER.ACTRELOAD.HINT"
+msgid "Reload"
+msgstr ""
+
 #: TFRMDIFFER.ACTSAVE.CAPTION
 msgctxt "TFRMDIFFER.ACTSAVE.CAPTION"
 msgid "Save"
 msgstr ""
 
+#: TFRMDIFFER.ACTSAVE.HINT
+msgctxt "TFRMDIFFER.ACTSAVE.HINT"
+msgid "Save"
+msgstr ""
+
 #: TFRMDIFFER.ACTSAVEAS.CAPTION
+msgctxt "TFRMDIFFER.ACTSAVEAS.CAPTION"
+msgid "Save as..."
+msgstr ""
+
+#: TFRMDIFFER.ACTSAVEAS.HINT
+msgctxt "TFRMDIFFER.ACTSAVEAS.HINT"
 msgid "Save as..."
 msgstr ""
 
 #: TFRMDIFFER.ACTSAVELEFT.CAPTION
+msgctxt "TFRMDIFFER.ACTSAVELEFT.CAPTION"
+msgid "Save Left"
+msgstr ""
+
+#: TFRMDIFFER.ACTSAVELEFT.HINT
+msgctxt "TFRMDIFFER.ACTSAVELEFT.HINT"
 msgid "Save Left"
 msgstr ""
 
 #: TFRMDIFFER.ACTSAVELEFTAS.CAPTION
+msgctxt "TFRMDIFFER.ACTSAVELEFTAS.CAPTION"
+msgid "Save Left As..."
+msgstr ""
+
+#: TFRMDIFFER.ACTSAVELEFTAS.HINT
+msgctxt "TFRMDIFFER.ACTSAVELEFTAS.HINT"
 msgid "Save Left As..."
 msgstr ""
 
 #: TFRMDIFFER.ACTSAVERIGHT.CAPTION
+msgctxt "TFRMDIFFER.ACTSAVERIGHT.CAPTION"
+msgid "Save Right"
+msgstr ""
+
+#: TFRMDIFFER.ACTSAVERIGHT.HINT
+msgctxt "TFRMDIFFER.ACTSAVERIGHT.HINT"
 msgid "Save Right"
 msgstr ""
 
 #: TFRMDIFFER.ACTSAVERIGHTAS.CAPTION
+msgctxt "TFRMDIFFER.ACTSAVERIGHTAS.CAPTION"
+msgid "Save Right As..."
+msgstr ""
+
+#: TFRMDIFFER.ACTSAVERIGHTAS.HINT
+msgctxt "TFRMDIFFER.ACTSAVERIGHTAS.HINT"
 msgid "Save Right As..."
 msgstr ""
 
 #: TFRMDIFFER.ACTSTARTCOMPARE.CAPTION
+msgctxt "TFRMDIFFER.ACTSTARTCOMPARE.CAPTION"
 msgid "Compare"
+msgstr ""
+
+#: TFRMDIFFER.ACTSTARTCOMPARE.HINT
+msgctxt "TFRMDIFFER.ACTSTARTCOMPARE.HINT"
+msgid "Compare"
+msgstr ""
+
+#: TFRMDIFFER.BTNLEFTENCODING.HINT
+msgctxt "TFRMDIFFER.BTNLEFTENCODING.HINT"
+msgid "Encoding"
+msgstr ""
+
+#: TFRMDIFFER.BTNRIGHTENCODING.HINT
+msgctxt "TFRMDIFFER.BTNRIGHTENCODING.HINT"
+msgid "Encoding"
 msgstr ""
 
 #: TFRMDIFFER.FRMDIFFER.CAPTION
@@ -1429,7 +1526,8 @@ msgstr ""
 msgid "Work in &background"
 msgstr ""
 
-#: TFRMFILEOP.CAPTION
+#: TFRMFILEOP.FRMFILEOP.CAPTION
+msgctxt "TFRMFILEOP.FRMFILEOP.CAPTION"
 msgid "Process file(s)"
 msgstr "處理檔案:"
 
@@ -2032,7 +2130,9 @@ msgid "Copy path to command line"
 msgstr "複製路徑到命令行"
 
 #: TFRMMAIN.ACTCALCULATESPACE.CAPTION
-msgid "Calculate &Occupied Space..."
+#, fuzzy
+#| msgid "Calculate &Occupied Space..."
+msgid "Calculate &Occupied Space"
 msgstr "計算已用空間..."
 
 #: TFRMMAIN.ACTCHANGEDIR.CAPTION
@@ -2048,13 +2148,17 @@ msgid "Change directory to root"
 msgstr "切換到根目錄"
 
 #: TFRMMAIN.ACTCHECKSUMCALC.CAPTION
+#, fuzzy
+#| msgid "Calculate check sum..."
 msgctxt "TFRMMAIN.ACTCHECKSUMCALC.CAPTION"
-msgid "Calculate check sum..."
+msgid "Calculate Check&sum..."
 msgstr "計算校驗..."
 
 #: TFRMMAIN.ACTCHECKSUMVERIFY.CAPTION
+#, fuzzy
+#| msgid "Verify check sum..."
 msgctxt "TFRMMAIN.ACTCHECKSUMVERIFY.CAPTION"
-msgid "Verify check sum..."
+msgid "&Verify Checksum..."
 msgstr "驗證校驗..."
 
 #: TFRMMAIN.ACTCLEARLOGFILE.CAPTION
@@ -2098,7 +2202,9 @@ msgid "&Copy"
 msgstr "複製"
 
 #: TFRMMAIN.ACTCOUNTDIRCONTENT.CAPTION
-msgid "Sho&w occupied space"
+#, fuzzy
+#| msgid "Sho&w occupied space"
+msgid "Sho&w Occupied Space"
 msgstr "顯示占用空間(&W)"
 
 #: TFRMMAIN.ACTCUTTOCLIPBOARD.CAPTION
@@ -2115,7 +2221,9 @@ msgid "Directory history"
 msgstr "歷史瀏覽目錄"
 
 #: TFRMMAIN.ACTDIRHOTLIST.CAPTION
-msgid "Directory &hotlist"
+#, fuzzy
+#| msgid "Directory &hotlist"
+msgid "Directory &Hotlist"
 msgstr "常用目錄列表"
 
 #: TFRMMAIN.ACTEDIT.CAPTION
@@ -2123,7 +2231,9 @@ msgid "Edit F4"
 msgstr "編輯 F4"
 
 #: TFRMMAIN.ACTEDITCOMMENT.CAPTION
-msgid "Edit comment..."
+#, fuzzy
+#| msgid "Edit comment..."
+msgid "Edit Co&mment..."
 msgstr "編輯備註..."
 
 #: TFRMMAIN.ACTEDITNEW.CAPTION
@@ -2146,26 +2256,34 @@ msgid "E&xit"
 msgstr "退出"
 
 #: TFRMMAIN.ACTEXTRACTFILES.CAPTION
-msgid "Extract files..."
+#, fuzzy
+#| msgid "Extract files..."
+msgid "&Extract Files..."
 msgstr "解壓縮檔案"
 
 #: TFRMMAIN.ACTFILEASSOC.CAPTION
 #, fuzzy
-#| msgid "File associations..."
-msgid "File &associations..."
+#| msgid "File &associations..."
+msgid "File &Associations..."
 msgstr "檔案關聯..."
 
 #: TFRMMAIN.ACTFILELINKER.CAPTION
-msgid "Link files"
+#, fuzzy
+#| msgid "Link files"
+msgid "Com&bine Files..."
 msgstr "捷徑檔案"
 
 #: TFRMMAIN.ACTFILEPROPERTIES.CAPTION
-msgid "Show file properties"
+#, fuzzy
+#| msgid "Show file properties"
+msgid "Show &File Properties"
 msgstr "顯示檔案屬性"
 
 #: TFRMMAIN.ACTFILESPLITER.CAPTION
+#, fuzzy
+#| msgid "Split file"
 msgctxt "TFRMMAIN.ACTFILESPLITER.CAPTION"
-msgid "Split file"
+msgid "Spl&it File..."
 msgstr "分割檔案"
 
 #: TFRMMAIN.ACTFOCUSCMDLINE.CAPTION
@@ -2182,9 +2300,9 @@ msgstr ""
 
 #: TFRMMAIN.ACTHARDLINK.CAPTION
 #, fuzzy
-#| msgid "Create link..."
+#| msgid "Create hard link..."
 msgctxt "TFRMMAIN.ACTHARDLINK.CAPTION"
-msgid "Create hard link..."
+msgid "Create &Hard Link..."
 msgstr "建立硬捷徑"
 
 #: TFRMMAIN.ACTHELPINDEX.CAPTION
@@ -2194,7 +2312,7 @@ msgid "&Contents"
 msgstr "內容"
 
 #: TFRMMAIN.ACTHORIZONTALFILEPANELS.CAPTION
-msgid "Horizontal file panels"
+msgid "&Horizontal Panels Mode"
 msgstr ""
 
 #: TFRMMAIN.ACTKEYBOARD.CAPTION
@@ -2212,11 +2330,11 @@ msgid "Open left drive list"
 msgstr "左驅動器列表"
 
 #: TFRMMAIN.ACTLOADSELECTIONFROMCLIP.CAPTION
-msgid "Load Selection From Clipboard"
+msgid "Load Selection from Clip&board"
 msgstr ""
 
 #: TFRMMAIN.ACTLOADSELECTIONFROMFILE.CAPTION
-msgid "Load Selection From File"
+msgid "&Load Selection from File..."
 msgstr ""
 
 #: TFRMMAIN.ACTMAKEDIR.CAPTION
@@ -2224,11 +2342,15 @@ msgid "MakeDir F7"
 msgstr "建立目錄 F7"
 
 #: TFRMMAIN.ACTMARKCURRENTEXTENSION.CAPTION
-msgid "Select all with same extension"
+#, fuzzy
+#| msgid "Select all with same extension"
+msgid "Select All with the Same E&xtension"
 msgstr "選擇所有相同副檔名"
 
 #: TFRMMAIN.ACTMARKINVERT.CAPTION
-msgid "Invert Selections"
+#, fuzzy
+#| msgid "Invert Selections"
+msgid "&Invert Selection"
 msgstr "反向選擇"
 
 #: TFRMMAIN.ACTMARKMARKALL.CAPTION
@@ -2236,15 +2358,21 @@ msgid "&Select All"
 msgstr "全部選中(&S)"
 
 #: TFRMMAIN.ACTMARKMINUS.CAPTION
-msgid "Unselect a group"
+#, fuzzy
+#| msgid "Unselect a group"
+msgid "Unselect a Gro&up..."
 msgstr "取消選擇組"
 
 #: TFRMMAIN.ACTMARKPLUS.CAPTION
-msgid "Select a group"
+#, fuzzy
+#| msgid "Select a group"
+msgid "Select a &Group..."
 msgstr "選擇一組"
 
 #: TFRMMAIN.ACTMARKUNMARKALL.CAPTION
-msgid "Unselect All"
+#, fuzzy
+#| msgid "Unselect All"
+msgid "&Unselect All"
 msgstr "全部不選"
 
 #: TFRMMAIN.ACTMINIMIZE.CAPTION
@@ -2252,31 +2380,33 @@ msgid "Minimize window"
 msgstr "最小化窗口"
 
 #: TFRMMAIN.ACTMULTIRENAME.CAPTION
-msgid "Multi Rename Tool"
+#, fuzzy
+#| msgid "Multi Rename Tool"
+msgid "Multi &Rename Tool"
 msgstr "多檔案改名工具"
 
 #: TFRMMAIN.ACTNETWORKCONNECT.CAPTION
-msgid "Network Connect..."
+msgid "Network &Connect..."
 msgstr ""
 
 #: TFRMMAIN.ACTNETWORKDISCONNECT.CAPTION
-msgid "Network Disconnect"
+msgid "Network &Disconnect"
 msgstr ""
 
 #: TFRMMAIN.ACTNETWORKQUICKCONNECT.CAPTION
-msgid "Network Quick Connect..."
+msgid "Network &Quick Connect..."
 msgstr ""
 
 #: TFRMMAIN.ACTNEWTAB.CAPTION
 #, fuzzy
-#| msgid "New tab"
-msgid "&New tab"
+#| msgid "&New tab"
+msgid "&New Tab"
 msgstr "新建標籤頁"
 
 #: TFRMMAIN.ACTNEXTTAB.CAPTION
 #, fuzzy
-#| msgid "Switch to next tab"
-msgid "Switch to nex&t tab"
+#| msgid "Switch to nex&t tab"
+msgid "Switch to Nex&t Tab"
 msgstr "切換到下一標籤"
 
 #: TFRMMAIN.ACTOPEN.CAPTION
@@ -2294,12 +2424,16 @@ msgstr ""
 
 #: TFRMMAIN.ACTOPENDIRINNEWTAB.CAPTION
 #, fuzzy
-#| msgid "Open folder in new tab"
-msgid "Open &folder in new tab"
+#| msgid "Open &folder in new tab"
+msgid "Open &Folder in a New Tab"
 msgstr "新標籤頁打開檔案夾"
 
 #: TFRMMAIN.ACTOPENVIRTUALFILESYSTEMLIST.CAPTION
 msgid "Open &VFS List"
+msgstr ""
+
+#: TFRMMAIN.ACTOPERATIONSVIEWER.CAPTION
+msgid "Operations &Viewer"
 msgstr ""
 
 #: TFRMMAIN.ACTOPTIONS.CAPTION
@@ -2309,7 +2443,9 @@ msgid "&Options..."
 msgstr "選項..."
 
 #: TFRMMAIN.ACTPACKFILES.CAPTION
-msgid "Pack files..."
+#, fuzzy
+#| msgid "Pack files..."
+msgid "&Pack Files..."
 msgstr "壓縮檔案"
 
 #: TFRMMAIN.ACTPANELSSPLITTERPERPOS.CAPTION
@@ -2322,8 +2458,8 @@ msgstr "貼上"
 
 #: TFRMMAIN.ACTPREVTAB.CAPTION
 #, fuzzy
-#| msgid "Switch to previous tab"
-msgid "Switch to &previous tab"
+#| msgid "Switch to &previous tab"
+msgid "Switch to &Previous Tab"
 msgstr "切換到上一標籤"
 
 #: TFRMMAIN.ACTQUICKFILTER.CAPTION
@@ -2336,7 +2472,7 @@ msgid "Quick search"
 msgstr "快速搜索"
 
 #: TFRMMAIN.ACTQUICKVIEW.CAPTION
-msgid "Quick View Panel"
+msgid "&Quick View Panel"
 msgstr ""
 
 #: TFRMMAIN.ACTREFRESH.CAPTION
@@ -2345,14 +2481,14 @@ msgstr "刷新(&R)"
 
 #: TFRMMAIN.ACTREMOVEALLTABS.CAPTION
 #, fuzzy
-#| msgid "Remove all tabs"
-msgid "Remove &all tabs"
+#| msgid "Remove &all tabs"
+msgid "Remove &All Tabs"
 msgstr "移除所有標籤"
 
 #: TFRMMAIN.ACTREMOVETAB.CAPTION
 #, fuzzy
-#| msgid "Remove tab"
-msgid "&Remove tab"
+#| msgid "&Remove tab"
+msgid "&Remove Tab"
 msgstr "刪除標籤頁"
 
 #: TFRMMAIN.ACTRENAME.CAPTION
@@ -2368,12 +2504,18 @@ msgctxt "TFRMMAIN.ACTRENAMEONLY.CAPTION"
 msgid "Rename"
 msgstr "改名"
 
+#: TFRMMAIN.ACTRENAMETAB.CAPTION
+msgid "Re&name Tab"
+msgstr ""
+
 #: TFRMMAIN.ACTRESTORESELECTION.CAPTION
-msgid "Restore Selection"
+msgid "&Restore Selection"
 msgstr ""
 
 #: TFRMMAIN.ACTREVERSEORDER.CAPTION
-msgid "Reverse order"
+#, fuzzy
+#| msgid "Reverse order"
+msgid "Re&verse Order"
 msgstr "反序排列"
 
 #: TFRMMAIN.ACTRIGHTEQUALLEFT.CAPTION
@@ -2385,28 +2527,32 @@ msgid "Open right drive list"
 msgstr "右驅動器列表"
 
 #: TFRMMAIN.ACTRUNTERM.CAPTION
-msgid "Run Term"
+#, fuzzy
+#| msgid "Run Term"
+msgid "Run &Terminal"
 msgstr "運行終端"
 
 #: TFRMMAIN.ACTSAVESELECTION.CAPTION
-msgid "Save Selection"
+msgid "Sa&ve Selection"
 msgstr ""
 
 #: TFRMMAIN.ACTSAVESELECTIONTOFILE.CAPTION
-msgid "Save Selection To File"
+msgid "Save S&election to File..."
 msgstr ""
 
 #: TFRMMAIN.ACTSEARCH.CAPTION
-msgid "&Search"
+#, fuzzy
+#| msgid "&Search"
+msgid "&Search..."
 msgstr "搜索(&S)"
 
 #: TFRMMAIN.ACTSETFILEPROPERTIES.CAPTION
 msgctxt "TFRMMAIN.ACTSETFILEPROPERTIES.CAPTION"
-msgid "Change attributes"
+msgid "Change &Attributes..."
 msgstr ""
 
 #: TFRMMAIN.ACTSETTABOPTIONDIRSINNEWTAB.CAPTION
-msgid "Directories are opened in new &tabs"
+msgid "Locked with Directories Opened in New &Tabs"
 msgstr ""
 
 #: TFRMMAIN.ACTSETTABOPTIONNORMAL.CAPTION
@@ -2418,7 +2564,7 @@ msgid "&Locked"
 msgstr ""
 
 #: TFRMMAIN.ACTSETTABOPTIONPATHRESETS.CAPTION
-msgid "Locked, but &directory changes allowed"
+msgid "Locked with &Directory Changes Allowed"
 msgstr ""
 
 #: TFRMMAIN.ACTSHOWBUTTONMENU.CAPTION
@@ -2435,28 +2581,40 @@ msgid "Menu F9"
 msgstr "目錄 F9"
 
 #: TFRMMAIN.ACTSHOWSYSFILES.CAPTION
+#, fuzzy
+#| msgid "Show hidden/system files"
 msgctxt "TFRMMAIN.ACTSHOWSYSFILES.CAPTION"
-msgid "Show hidden/system files"
+msgid "Show &Hidden/System Files"
 msgstr "顯示隱藏/系統檔案"
 
 #: TFRMMAIN.ACTSORTBYATTR.CAPTION
-msgid "Sort by attrib"
+#, fuzzy
+#| msgid "Sort by attrib"
+msgid "Sort by &Attributes"
 msgstr "按屬性排序"
 
 #: TFRMMAIN.ACTSORTBYDATE.CAPTION
-msgid "Sort by date"
+#, fuzzy
+#| msgid "Sort by date"
+msgid "Sort by &Date"
 msgstr "按日期排序"
 
 #: TFRMMAIN.ACTSORTBYEXT.CAPTION
-msgid "Sort by extension"
+#, fuzzy
+#| msgid "Sort by extension"
+msgid "Sort by &Extension"
 msgstr "按副檔名排序"
 
 #: TFRMMAIN.ACTSORTBYNAME.CAPTION
-msgid "Sort by name"
+#, fuzzy
+#| msgid "Sort by name"
+msgid "Sort by &Name"
 msgstr "按檔案名排序"
 
 #: TFRMMAIN.ACTSORTBYSIZE.CAPTION
-msgid "Sort by size"
+#, fuzzy
+#| msgid "Sort by size"
+msgid "Sort by &Size"
 msgstr "按大小排序"
 
 #: TFRMMAIN.ACTSWITCHIGNORELIST.CAPTION
@@ -2465,9 +2623,9 @@ msgstr ""
 
 #: TFRMMAIN.ACTSYMLINK.CAPTION
 #, fuzzy
-#| msgid "Create symlink..."
+#| msgid "Create symbolic link..."
 msgctxt "TFRMMAIN.ACTSYMLINK.CAPTION"
-msgid "Create symbolic link..."
+msgid "Create Symbolic &Link..."
 msgstr "建立符號捷徑"
 
 #: TFRMMAIN.ACTTARGETEQUALSOURCE.CAPTION
@@ -2475,7 +2633,7 @@ msgid "Target &= Source"
 msgstr "目標 &= 源"
 
 #: TFRMMAIN.ACTTESTARCHIVE.CAPTION
-msgid "Test Archive(s)"
+msgid "&Test Archive(s)"
 msgstr ""
 
 #: TFRMMAIN.ACTTRANSFERLEFT.CAPTION
@@ -2487,7 +2645,9 @@ msgid "Transfer dir under cursor to right window"
 msgstr "傳輸當前行到右窗口"
 
 #: TFRMMAIN.ACTUNMARKCURRENTEXTENSION.CAPTION
-msgid "Unselect all with same extension"
+#, fuzzy
+#| msgid "Unselect all with same extension"
+msgid "Unselect All with the Same Ex&tension"
 msgstr "取消選擇所有相同副檔名"
 
 #: TFRMMAIN.ACTVIEW.CAPTION
@@ -2508,8 +2668,8 @@ msgstr ""
 
 #: TFRMMAIN.ACTVISITHOMEPAGE.CAPTION
 #, fuzzy
-#| msgid "Visit Double Commander Web Site"
-msgid "&Visit Double Commander Web Site"
+#| msgid "&Visit Double Commander Web Site"
+msgid "&Visit Double Commander Website"
 msgstr "訪問 Double Commander 網站"
 
 #: TFRMMAIN.ACTWIPE.CAPTION
@@ -2681,11 +2841,6 @@ msgctxt "TFRMMAIN.MILINE1.CAPTION"
 msgid "-"
 msgstr "-"
 
-#: TFRMMAIN.MILINE10.CAPTION
-msgctxt "TFRMMAIN.MILINE10.CAPTION"
-msgid "-"
-msgstr "-"
-
 #: TFRMMAIN.MILINE12.CAPTION
 msgctxt "TFRMMAIN.MILINE12.CAPTION"
 msgid "-"
@@ -2852,10 +3007,6 @@ msgstr "配置(&O)"
 msgid "&Files"
 msgstr "檔案(&F)"
 
-#: TFRMMAIN.MNUFILESCOMBINE.CAPTION
-msgid "Combine Files"
-msgstr "合併檔案"
-
 #: TFRMMAIN.MNUHELP.CAPTION
 msgctxt "TFRMMAIN.MNUHELP.CAPTION"
 msgid "&Help"
@@ -2865,10 +3016,6 @@ msgstr "幫助(&H)"
 msgid "&Mark"
 msgstr "標記(&M)"
 
-#: TFRMMAIN.MNUMARKCMPDIR.CAPTION
-msgid "&Compare Directories"
-msgstr "編輯目錄(&C)"
-
 #: TFRMMAIN.MNUNETWORK.CAPTION
 msgid "Network"
 msgstr ""
@@ -2876,10 +3023,6 @@ msgstr ""
 #: TFRMMAIN.MNUSHOW.CAPTION
 msgid "&Show"
 msgstr "顯示(&S)"
-
-#: TFRMMAIN.MNUSHOWOPERATIONS.CAPTION
-msgid "Operations viewer"
-msgstr ""
 
 #: TFRMMAIN.MNUTABOPTIONS.CAPTION
 msgctxt "TFRMMAIN.MNUTABOPTIONS.CAPTION"
@@ -4565,10 +4708,6 @@ msgctxt "TFRMPACKDLG.BTNOK.CAPTION"
 msgid "OK"
 msgstr "確定"
 
-#: TFRMPACKDLG.CAPTION
-msgid "Pack files"
-msgstr "壓縮檔案"
-
 #: TFRMPACKDLG.CBCREATESEPARATEARCHIVES.CAPTION
 msgid "Create separate archives, o&ne per selected file/dir"
 msgstr "為選擇的每個檔案/目錄建立單獨的壓縮檔案"
@@ -4600,6 +4739,11 @@ msgstr "遞歸壓縮子目錄(&S)"
 #: TFRMPACKDLG.CBSTOREDIR.CAPTION
 msgid "Also &pack path names (only recursed)"
 msgstr "壓縮路徑名(僅有依賴時)(&P)"
+
+#: TFRMPACKDLG.FRMPACKDLG.CAPTION
+msgctxt "TFRMPACKDLG.FRMPACKDLG.CAPTION"
+msgid "Pack files"
+msgstr "壓縮檔案"
 
 #: TFRMPACKDLG.LBLPROMPT.CAPTION
 msgid "Pack file(s) to the file:"
@@ -4917,10 +5061,6 @@ msgctxt "TFRMTWEAKPLUGIN.BTNREMOVE.CAPTION"
 msgid "Remove"
 msgstr "移除"
 
-#: TFRMTWEAKPLUGIN.CAPTION
-msgid "Tweak plugin"
-msgstr "Tweak插件"
-
 #: TFRMTWEAKPLUGIN.CBPK_CAPS_BY_CONTENT.CAPTION
 msgid "Detect archive type by content"
 msgstr "按內容檢測壓縮檔類型"
@@ -4960,6 +5100,11 @@ msgstr "支持選項對話框"
 #: TFRMTWEAKPLUGIN.CBPK_CAPS_SEARCHTEXT.CAPTION
 msgid "Allow searching for text in archives"
 msgstr "允許在壓縮檔中搜索文字"
+
+#: TFRMTWEAKPLUGIN.FRMTWEAKPLUGIN.CAPTION
+msgctxt "TFRMTWEAKPLUGIN.FRMTWEAKPLUGIN.CAPTION"
+msgid "Tweak plugin"
+msgstr "Tweak插件"
 
 #: TFRMTWEAKPLUGIN.LBLDESCRIPTION.CAPTION
 msgctxt "TFRMTWEAKPLUGIN.LBLDESCRIPTION.CAPTION"
@@ -6305,6 +6450,14 @@ msgstr "選擇下一卷位置"
 #: ulng.rsmsgsetvolumelabel
 msgid "Set volume label"
 msgstr "設置卷標"
+
+#: ulng.rsmsgtabrenamecaption
+msgid "Rename tab"
+msgstr ""
+
+#: ulng.rsmsgtabrenameprompt
+msgid "New tab name:"
+msgstr ""
 
 #: ulng.rsmsgtargetdir
 msgid "Target path:"
